# nix-config

./: Cargo.toml  conf.nix  flake.nix
core/desktop/: desktop.nix
core/docker/: docker.nix
core/font/: font.nix
core/i18n/: i18n.nix
core/ld/: ld.nix
core/nixconf/: nix.conf  nixconf.nix
core/user/: user.nix
core/utilities/: bluetooth.nix  unfree-utilities.nix  utilities.nix
home/: home.nix
home/hyprland/: cursor-nvidia.conf  cursor.conf  devices.conf  exec.conf  hyprland.nix  keybindings.conf  keyboard.conf  monitor.conf  mouse.conf  touchpad.conf
home/waybar/: waybar.css  waybar.json  waybar.nix
home/waybar/autoname/: config.toml
home/zsh/: zsh.nix
hosts/desktop/: boot.nix  hardware-configuration.nix
hosts/note/: boot.nix  hardware-configuration.nix  network.nix  swap.nix
rust/background/: Cargo.toml
rust/background/src/: graphic.rs  main.rs  wayland.rs
rust/background/src/graphic/: graphic_impl.rs
rust/background/src/wayland/: surface.rs
