[workspace.package]
name = "comavius nix-config utilities"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "rust/background",
]
resolver = "3"

[workspace.dependencies]
wayland-client = "0.31.10"
tempfile = "3.20.0"
wayland-protocols-wlr = { version = "0.3.8", features = ["client"] }
wayland-egl = "0.32.7"
anyhow = "1.0.98"
khronos-egl = "6.0.0"
gl = "0.14.0"