[package]
name = "background"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client.workspace = true
tempfile.workspace = true
wayland-protocols-wlr.workspace = true
wayland-egl.workspace = true
anyhow.workspace = true
khronos-egl = { workspace = true, features = ["static"] }
gl.workspace = true